hphp/hack/test/typecheck/using/using_bad_undefined.php.exp
File "using_bad_undefined.php", line 26, characters 3-4:
Variable $x is undefined, or not always defined (Naming[2050])
File "using_bad_undefined.php", line 39, characters 3-4:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
